[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-test-case-generator"
version = "0.1.0"
description = "Turn a feature/requirement into runnable test cases (with validators) for AI/LLM features. Outputs prompt-regression-suite YAML; validates every generated case against a schema."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
dev = ["pytest>=7.0"]

[project.scripts]
test-case-generator = "test_case_generator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
